creating notebook with notes and creating note
