# notepad-service/src/main/resources/openapi/api-docs.yml
@@ -5,8 +5,12 @@ info:
 servers:
   - url: http://localhost:8080/api/customer
 tags:
-  - name: MainDirection
-    description: MainDirection API
+  - name: Folder
+    description: Folder API
+  - name: Notebook
+    description: Notebook API
+  - name: Note
+    description: Note API
 paths:
   /v1/folder:
     post:
@@ -22,7 +26,7 @@ paths:
         required: true
       responses:
         '201':
-          description: Main directions were created
+          description: Folder is created
           content:
             application/json:
               schema:
@@ -58,6 +62,105 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponseDto'
 
+  /v1/notebook:
+    post:
+      operationId: createNotebook
+      summary: Create new notebook
+      tags:
+        - Notebook
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NotebookDto'
+        required: true
+      responses:
+        '201':
+          description: Notebook is created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NotebookDto'
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDto'
+        '401':
+          description: Not authorised
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDto'
+        '404':
+          description: Resource not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDto'
+        '405':
+          description: Method is not available
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDto'
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDto'
+
+  /v1/note:
+    post:
+      operationId: createNote
+      summary: Create new note
+      tags:
+        - Note
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NoteDto'
+        required: true
+      responses:
+        '201':
+          description: Note is created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NoteDto'
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDto'
+        '401':
+          description: Not authorised
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDto'
+        '404':
+          description: Resource not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDto'
+        '405':
+          description: Method is not available
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDto'
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseDto'
 
 components:
   schemas:
@@ -95,6 +198,9 @@ components:
         id:
           type: string
           format: uuid
+        folderId:
+          type: string
+          format: uuid
         name:
           type: string
           nullable: false
@@ -108,6 +214,9 @@ components:
       type: object
       properties:
         id:
+          type: string
+          format: uuid
+        notebookId:
           type: string
           format: uuid
         name:
